@@ -18,6 +18,7 @@ JSRC  = com/muscat/om/OmObject.java			\
 	com/muscat/om/OmQuery.java			\
 	com/muscat/om/OmRSet.java			\
 	com/muscat/om/OmMatchOptions.java		\
+	com/muscat/om/OmMatchDecider.java		\
 	com/muscat/om/OmVector.java			\
 	com/muscat/om/OmStem.java			\
 	com/muscat/om/OmMSetItemVector.java		\
@@ -35,7 +36,40 @@ JSRC  = com/muscat/om/OmObject.java			\
 	com/muscat/om/OmInvalidArgumentError.java	\
 	com/muscat/om/OmDocNotFoundError.java		\
 	com/muscat/om/OmNetworkError.java		\
-	Test.java					
+	RunTest.java
+
+JCLASSES  = com/muscat/om/OmObject.class			\
+	com/muscat/om/OmReturnObject.class		\
+	com/muscat/om/OmDatabaseGroup.class		\
+	com/muscat/om/OmEnquire.class			\
+	com/muscat/om/OmDocument.class			\
+	com/muscat/om/OmKey.class			\
+	com/muscat/om/OmData.class			\
+	com/muscat/om/OmMSet.class			\
+	com/muscat/om/OmVector.class			\
+	com/muscat/om/OmMSetItem.class			\
+	com/muscat/om/OmQuery.class			\
+	com/muscat/om/OmRSet.class			\
+	com/muscat/om/OmMatchOptions.class		\
+	com/muscat/om/OmVector.class			\
+	com/muscat/om/OmStem.class			\
+	com/muscat/om/OmMSetItemVector.class		\
+	com/muscat/om/Mus36Field.class			\
+	com/muscat/om/OmESet.class			\
+	com/muscat/om/OmESetItem.class			\
+	com/muscat/om/OmESetItemVector.class		\
+	com/muscat/om/OmExpandOptions.class		\
+	com/muscat/om/OmExpandDecider.class		\
+	com/muscat/om/OmPrefixExpandDecider.class	\
+	com/muscat/om/OmError.class			\
+	com/muscat/om/OmRuntimeError.class		\
+	com/muscat/om/OmOpeningError.class		\
+	com/muscat/om/OmLogicError.class			\
+	com/muscat/om/OmInvalidArgumentError.class	\
+	com/muscat/om/OmDocNotFoundError.class		\
+	com/muscat/om/OmNetworkError.class		\
+	Test.class					\
+	RunTest.class
 
 # where to put the class files
 
@@ -44,6 +78,7 @@ JAVAROOT   =  $(top_builddir)/bindings/java/classes
 # the java compiler
 
 JAVAC = jikes
+JAVACFLAGS = +E
 
 # generate a list of class files
 
@@ -51,8 +86,11 @@ JAVAC = jikes
 
 # rule to make java -> class
 
-#$(OUT)/%.class:	%.java
-#		CLASSPATH=$(CP) $(JAVAC) -d $(OUT) $<
+all-local: class.timestamp
+
+class.timestamp: $(JSRC)
+	CLASSPATH=$(CLASSPATH) $(JAVAC) -d $(JAVAROOT) $(JAVACFLAGS) $^
+	echo "TIMESTAMP" > class.timestamp
 
 #all:		$(TARGETS)
 
