@@ -1,3 +1,10 @@
+Tue Jul  4 17:43:28 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* More java makefile tweaks.
+
+	* New test program for java bindings, which so far checks that it
+	  can stem a word.
+
 Tue Jul  4 16:58:08 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
 
 	* Added comments to ensure that things are changed in sync in omstem.
